--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
             "Sapling\\Core\\": "src/"
         },
         "files": [
-            "src/functions.php"
+            "src/helpers.php"
         ]
     },
     "scripts": {
